--- a/Waldem/Waldem.vcxproj.filters
+++ b/Waldem/Waldem.vcxproj.filters
@@ -1,36 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Waldem">
+      <UniqueIdentifier>{1F0CE8D9-0BAE-12B0-F468-2604E0A99900}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Waldem\Events">
+      <UniqueIdentifier>{23FF5022-8FBF-CC58-58FA-15D6C4791135}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Waldem.h" />
     <ClInclude Include="src\Waldem\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Waldem</Filter>
     </ClInclude>
     <ClInclude Include="src\Waldem\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Waldem.h">
-      <Filter>Header Files</Filter>
+      <Filter>Waldem</Filter>
     </ClInclude>
     <ClInclude Include="src\Waldem\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Waldem</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Events\ApplicationEvent.h">
+      <Filter>Waldem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Events\Event.h">
+      <Filter>Waldem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Events\KeyEvent.h">
+      <Filter>Waldem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Events\MouseEvent.h">
+      <Filter>Waldem\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Log.h">
+      <Filter>Waldem</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Waldem\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Waldem</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\Log.cpp">
+      <Filter>Waldem</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
