--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Waldem/vendor/spdlog"]
 	path = Waldem/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Waldem/vendor/GLFW"]
+	path = Waldem/vendor/GLFW
+	url = https://github.com/TheCherno/GLFW
