--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Waldem/vendor/GLFW"]
 	path = Waldem/vendor/GLFW
 	url = https://github.com/TheCherno/GLFW
+[submodule "Waldem/vendor/imgui"]
+	path = Waldem/vendor/imgui
+	url = https://github.com/TheCherno/imgui
