--- a/Waldem/Waldem.vcxproj.filters
+++ b/Waldem/Waldem.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,14 @@
     <Filter Include="Waldem\Events">
       <UniqueIdentifier>{23FF5022-8FBF-CC58-58FA-15D6C4791135}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Waldem\ImGui">
+      <UniqueIdentifier>{89DC1628-753F-A6CC-1EC5-DE820A07724F}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -40,6 +49,9 @@
     <ClInclude Include="src\Waldem\Events\MouseEvent.h">
       <Filter>Waldem\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Waldem\ImGui\ImGuiLayer.h">
+      <Filter>Waldem\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Waldem\Layer.h">
       <Filter>Waldem</Filter>
     </ClInclude>
@@ -55,11 +67,17 @@
     <ClInclude Include="src\wdpch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Waldem\Application.cpp">
       <Filter>Waldem</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\ImGui\ImGuiLayer.cpp">
+      <Filter>Waldem\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Waldem\Layer.cpp">
       <Filter>Waldem</Filter>
