-imgui opengl own implementations removed ~imgui to sandbox linking errors fixed

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,19 +4,34 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=3020,300
-ViewportId=0xE927CF2F
-Size=862,811
+Pos=989,19
+Size=291,701
 Collapsed=0
 
 [Window][Example: Console]
-Pos=1274,95
-Size=520,600
+Pos=0,500
+Size=987,220
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Example: Log]
-Pos=478,165
-Size=500,400
+Pos=0,583
+Size=1036,209
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=-232,74
+Size=500,440
+Collapsed=0
+
+[Window][Test]
+Pos=370,127
+Size=414,298
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -25,4 +40,9 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
+DockSpace     ID=0x3BC79352 Pos=684,344 Size=1280,701 Split=Y
+  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,479 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1329,562 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1329,209 Selected=0xDBFE1153
+  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=1280,220 Selected=0xDE6E0C33
 
