--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,12 +1,13 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=607,127
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=989,19
-Size=291,701
+Pos=556,26
+Size=264,283
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Console]
 Pos=0,500
@@ -21,6 +22,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace Demo]
+Pos=142,-48
 Size=1280,720
 Collapsed=0
 
@@ -30,9 +32,10 @@ Size=500,440
 Collapsed=0
 
 [Window][Test]
-Pos=237,134
-Size=414,298
+Pos=556,311
+Size=264,400
 Collapsed=0
+DockId=0x00000007,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -40,7 +43,10 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=684,344 Size=1280,701 Split=Y
+DockNode      ID=0x00000001 Pos=1254,427 Size=264,685 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=291,290 Selected=0xE87781F4
+  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=291,409 Selected=0x44A6A033
+DockSpace     ID=0x3BC79352 Pos=339,274 Size=1280,701 Split=Y
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,479 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1329,562 CentralNode=1
     DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1329,209 Selected=0xDBFE1153
