--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=556,26
-Size=264,283
+ViewportPos=1842,425
+ViewportId=0xA4D966FE
+Pos=0,341
+Size=264,344
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][Example: Console]
 Pos=0,500
@@ -32,10 +34,11 @@ Size=500,440
 Collapsed=0
 
 [Window][Test]
-Pos=556,311
-Size=264,400
+ViewportPos=1842,425
+ViewportId=0xA4D966FE
+Size=264,339
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -43,9 +46,9 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1254,427 Size=264,685 Split=Y
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=291,290 Selected=0xE87781F4
-  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=291,409 Selected=0x44A6A033
+DockNode      ID=0x00000001 Pos=1842,425 Size=264,685 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=264,339 Selected=0x44A6A033
+  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=264,344 Selected=0xE87781F4
 DockSpace     ID=0x3BC79352 Pos=339,274 Size=1280,701 Split=Y
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,479 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1329,562 CentralNode=1
