--- a/Waldem/Waldem.vcxproj.filters
+++ b/Waldem/Waldem.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
@@ -18,6 +21,15 @@
     </Filter>
     <Filter Include="src\Waldem\ImGui">
       <UniqueIdentifier>{0083373B-EC7B-568D-15AE-3B1201063699}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Waldem\Renderer">
+      <UniqueIdentifier>{BC89F00B-28EB-CD19-B158-14CC1DB904D9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Waldem\Renderer\Model">
+      <UniqueIdentifier>{FC4F8A25-6812-BEAF-B1C2-4C3C1DC4968D}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Waldem\SceneManagement">
+      <UniqueIdentifier>{10821B4F-FC91-C71F-654B-2C3E517AB6B8}</UniqueIdentifier>
     </Filter>
     <Filter Include="vendor">
       <UniqueIdentifier>{B3738122-9F15-ACF8-88D0-BF4C74113349}</UniqueIdentifier>
@@ -42,6 +54,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
@@ -92,6 +113,30 @@
     </ClInclude>
     <ClInclude Include="src\Waldem\MouseButtonCodes.h">
       <Filter>src\Waldem</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Renderer\Buffer.h">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Renderer\Model\Mesh.h">
+      <Filter>src\Waldem\Renderer\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Renderer\PixelShader.h">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Renderer\Renderer.h">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Renderer\RenderingContext.h">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\Renderer\VertexArray.h">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\SceneManagement\Scene.h">
+      <Filter>src\Waldem\SceneManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waldem\SceneManagement\SceneManager.h">
+      <Filter>src\Waldem\SceneManagement</Filter>
     </ClInclude>
     <ClInclude Include="src\Waldem\Window.h">
       <Filter>src\Waldem</Filter>
@@ -1349,6 +1394,15 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1372,6 +1426,27 @@
     </ClCompile>
     <ClCompile Include="src\Waldem\Log.cpp">
       <Filter>src\Waldem</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\Renderer\Buffer.cpp">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\Renderer\Model\Mesh.cpp">
+      <Filter>src\Waldem\Renderer\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\Renderer\PixelShader.cpp">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\Renderer\Renderer.cpp">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\Renderer\VertexArray.cpp">
+      <Filter>src\Waldem\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\SceneManagement\Scene.cpp">
+      <Filter>src\Waldem\SceneManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Waldem\SceneManagement\SceneManager.cpp">
+      <Filter>src\Waldem\SceneManagement</Filter>
     </ClCompile>
     <ClCompile Include="src\wdpch.cpp">
       <Filter>src</Filter>
