--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=-19,-666
-ViewportId=0xA4D966FE
-Pos=0,341
-Size=264,344
+Pos=907,90
+Size=289,576
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000001,0
 
 [Window][Example: Console]
 Pos=0,500
@@ -34,11 +32,10 @@ Size=500,440
 Collapsed=0
 
 [Window][Test]
-ViewportPos=-19,-666
-ViewportId=0xA4D966FE
-Size=264,339
+Pos=907,90
+Size=289,576
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,1
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -46,9 +43,7 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=-19,-666 Size=264,685 Split=Y
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=264,339 Selected=0x44A6A033
-  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=264,344 Selected=0xE87781F4
+DockNode      ID=0x00000001 Pos=1097,303 Size=289,576 Selected=0x44A6A033
 DockSpace     ID=0x3BC79352 Pos=339,274 Size=1280,701 Split=Y
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,479 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1329,562 CentralNode=1
