directx rendering pipeline started

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=-19,-666
-ViewportId=0xA4D966FE
-Pos=0,341
-Size=264,344
+Pos=718,140
+Size=531,470
 Collapsed=0
 DockId=0x00000007,0
 
@@ -34,9 +32,8 @@ Size=500,440
 Collapsed=0
 
 [Window][Test]
-ViewportPos=-19,-666
-ViewportId=0xA4D966FE
-Size=264,339
+Pos=718,68
+Size=531,70
 Collapsed=0
 DockId=0x00000002,0
 
@@ -46,9 +43,9 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=-19,-666 Size=264,685 Split=Y
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=264,339 Selected=0x44A6A033
-  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=264,344 Selected=0xE87781F4
+DockNode      ID=0x00000001 Pos=1523,514 Size=531,542 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=264,70 Selected=0x44A6A033
+  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=264,470 Selected=0xE87781F4
 DockSpace     ID=0x3BC79352 Pos=339,274 Size=1280,701 Split=Y
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=1280,479 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1329,562 CentralNode=1
