--- a/Waldem/Waldem.vcxproj
+++ b/Waldem/Waldem.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Platform\Graphics\DirectX\DirectXRenderer.h" />
+    <ClInclude Include="src\Platform\Graphics\DirectX\DirectXShader.h" />
     <ClInclude Include="src\Platform\Graphics\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\Graphics\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Graphics\OpenGL\OpenGLRenderer.h" />
@@ -173,6 +174,7 @@
     <ClInclude Include="src\Waldem\Log.h" />
     <ClInclude Include="src\Waldem\MouseButtonCodes.h" />
     <ClInclude Include="src\Waldem\Renderer\Buffer.h" />
+    <ClInclude Include="src\Waldem\Renderer\CommandList.h" />
     <ClInclude Include="src\Waldem\Renderer\Light.h" />
     <ClInclude Include="src\Waldem\Renderer\Model\Material.h" />
     <ClInclude Include="src\Waldem\Renderer\Model\Mesh.h" />
@@ -181,6 +183,7 @@
     <ClInclude Include="src\Waldem\Renderer\Pipeline.h" />
     <ClInclude Include="src\Waldem\Renderer\Renderer.h" />
     <ClInclude Include="src\Waldem\Renderer\RenderingContext.h" />
+    <ClInclude Include="src\Waldem\Renderer\Resources\ResourceManager.h" />
     <ClInclude Include="src\Waldem\Renderer\Shader.h" />
     <ClInclude Include="src\Waldem\Renderer\Texture.h" />
     <ClInclude Include="src\Waldem\Renderer\VertexArray.h" />
@@ -610,6 +613,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\Graphics\DirectX\DirectXRenderer.cpp" />
+    <ClCompile Include="src\Platform\Graphics\DirectX\DirectXShader.cpp" />
     <ClCompile Include="src\Platform\Graphics\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\Graphics\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Graphics\OpenGL\OpenGLRenderer.cpp" />
@@ -626,14 +630,17 @@
     <ClCompile Include="src\Waldem\LayerStack.cpp" />
     <ClCompile Include="src\Waldem\Log.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Waldem\Renderer\CommandList.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Model\Mesh.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Model\Transform.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Pipeline.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Waldem\Renderer\Resources\ResourceManager.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Shader.cpp" />
     <ClCompile Include="src\Waldem\Renderer\Texture.cpp" />
     <ClCompile Include="src\Waldem\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Waldem\SceneManagement\Scene.cpp" />
+    <ClInclude Include="src\Waldem\Utils\FileUtils.h" />
     <ClCompile Include="src\Waldem\World\Camera.cpp" />
     <ClCompile Include="src\wdpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
